# proj_repo-cmake

./: CMakeLists.txt  main.c
